--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -75,7 +76,7 @@
         <h2>İletişim</h2>
         <ul>
             <li>
-                <a href="anil.uyan@hotmail.com">E-mail</a>
+                <a href="mailto:anil.uyan@hotmail.com">E-mail</a>
             </li>
         </ul>
     </section>
